--- a/.github/workflows/buildReactAutomatically.yml
+++ b/.github/workflows/buildReactAutomatically.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "react-app/**"
+      - "my-app/**"
   pull_request:
     branches: ["main"]
     
